--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@ Template Name: Wedding
 	<div class="col-md-12">
 		<div class="wd_footer_section">
 			<img src="images/header/flogo.png" alt="Logo" class="img-responsive">
-			<p>@ Copyright 2019 All Rights Reserved. By Gowtham's web.</p>
-			<p>To make one for you email, <a href="#">gautamanz@hotmail.com<a></p>
+			<p>@ Copyright 2018 All Rights Reserved. By Gowtham's web.</p>
+			<p>To make one for you, email <a href="#">gautamanz@hotmail.com<a></p>
 		</div>
 	</div>
 </div>
