--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ Template Name: Wedding
 					<p>At Lakshmi Thirumana Mandabam, Pollachi Main Rd, Eechanari, Coimbatore.</p>
 					<div class="clearfix"></div>
 					<!-- <a href="#"><img src="images/content/map.png" alt="Map" class="img-responsive"></a>-->
-					<iframe src="http://maps.google.com/maps?q=10.923619, 76.981882&z=15&output=embed" width="360" height="270" frameborder="0" style="border:0"></iframe>
+					<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=10.9235382, 76.9818925&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de">web agentur</a></div><style>.mapouter{text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-lg-pull-4 col-md-pull-4 col-sm-pull-0">
