--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@ Template Name: Wedding
 					<h1>7:30 am</h1>
 					<p>At Lakshmi Thirumana Mandabam, Pollachi Main Rd, Eechanari, Coimbatore.</p>
 					<div class="clearfix"></div>
-					<!-- <a href="#"><img src="images/content/map.png" alt="Map" class="img-responsive"></a>-->
-					<iframe src="http://maps.google.com/maps?q=10.923543, 76.981892&z=15&output=embed" width="360" height="270" frameborder="0" style="border:0"></iframe>
+					<a href="https://www.google.com/maps/place/Lakshmi+Kalyana+Mandapam/@10.9235382,76.9818925,15z/data=!4m5!3m4!1s0x0:0xafd04ddef4984a22!8m2!3d10.9235382!4d76.9818925"><img src="images/content/map.png" alt="Map" class="img-responsive"></a>
+					<!-- <iframe src="http://maps.google.com/maps?q=10.923543, 76.981892&z=15&output=embed" width="360" height="270" frameborder="0" style="border:0"></iframe>-->
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-lg-push-4 col-md-push-4 col-sm-push-0">
@@ -173,8 +173,7 @@ Template Name: Wedding
 					<h1>6:30 pm</h1>
 					<p>At Lakshmi Thirumana Mandabam, Pollachi Main Rd, Eechanari, Coimbatore.</p>
 					<div class="clearfix"></div>
-					<!-- <a href="#"><img src="images/content/map.png" alt="Map" class="img-responsive"></a>-->
-					<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=10.9235382, 76.9818925&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de">web agentur</a></div><style>.mapouter{text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
+					<a href="https://www.google.com/maps/place/Lakshmi+Kalyana+Mandapam/@10.9235382,76.9818925,15z/data=!4m5!3m4!1s0x0:0xafd04ddef4984a22!8m2!3d10.9235382!4d76.9818925"><img src="images/content/map.png" alt="Map" class="img-responsive"></a>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-lg-pull-4 col-md-pull-4 col-sm-pull-0">
