--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Template Name: Wedding
 						<img src="images/content/groom.jpg" alt="Groom" class="img-responsive">
 					</div>
 					<h2>S Balaji</h2>
-					<p>(S/o Mr. Senthilkumar R & Mrs. Baby S)</p>
+					<p>(S/o Mr.Senthilkumar R & Mrs.Baby S)</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-21 col-xs-12 col-lg-push-4 col-md-push-4 col-sm-push-0">
@@ -103,8 +103,8 @@ Template Name: Wedding
 						<span><img src="images/content/line.png" alt="Line" class="img-responsive"></span>
 						<img src="images/content/bride.jpg" alt="Groom" class="img-responsive">
 					</div>
-					<h2>Ramya</h2>
-					<p>(D/o Mr. Ramkumar M & Mrs. Kavitha V)</p>
+					<h2>R Ramya</h2>
+					<p>(D/o Mr.Ramkumar M & Mrs.Kavitha V)</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-lg-pull-4 col-md-pull-4 col-sm-pull-0">
