--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Template Name: Wedding
 						<p>We inviting you and your family on</p>
 						<h3>Saturday</h3>
 						<h2>16 Mar 2019</h2>
-						<p>At Lakshmi Thirumana Mandabam, Pollachi Main Rd, Eechanari, Coimbatore.</p>
+						<p>At Lakshmi Thirumana Mandabam, Pollachi Main Rd, Echanari, Coimbatore.</p>
 					</div>
 				</div>
 			</div>
@@ -160,7 +160,7 @@ Template Name: Wedding
 					<h2>Muhurtham</h2>
 					<p style="margin-top:5px;margin-bottom:-20px;">17 Mar 2019</p>
 					<h1>7:30 am</h1>
-					<p>At Lakshmi Thirumana Mandabam, Pollachi Main Rd, Eechanari, Coimbatore.</p>
+					<p>At Lakshmi Thirumana Mandabam, Pollachi Main Rd, Echanari, Coimbatore.</p>
 					<div class="clearfix"></div>
 					<a href="https://www.google.com/maps/place/Lakshmi+Kalyana+Mandapam/@10.9235382,76.9818925,15z/data=!4m5!3m4!1s0x0:0xafd04ddef4984a22!8m2!3d10.9235382!4d76.9818925"><img src="images/content/map.png" alt="Map" class="img-responsive"></a>
 					<!-- <iframe src="http://maps.google.com/maps?q=10.923543, 76.981892&z=15&output=embed" width="360" height="270" frameborder="0" style="border:0"></iframe>-->
@@ -171,7 +171,7 @@ Template Name: Wedding
 					<h2>Reception</h2>
 					<p style="margin-top:5px;margin-bottom:-20px;">16 Mar 2019</p>
 					<h1>6:30 pm</h1>
-					<p>At Lakshmi Thirumana Mandabam, Pollachi Main Rd, Eechanari, Coimbatore.</p>
+					<p>At Lakshmi Thirumana Mandabam, Pollachi Main Rd, Echanari, Coimbatore.</p>
 					<div class="clearfix"></div>
 					<a href="https://www.google.com/maps/place/Lakshmi+Kalyana+Mandapam/@10.9235382,76.9818925,15z/data=!4m5!3m4!1s0x0:0xafd04ddef4984a22!8m2!3d10.9235382!4d76.9818925"><img src="images/content/map.png" alt="Map" class="img-responsive"></a>
 				</div>
