--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Template Name: Wedding
 				<div class="wd_about_infobox wd_toppadder20">
 					<div class="wd_about_infobox_img">
 						<span><img src="images/content/line.png" alt="Line" class="img-responsive"></span>
-						<img src="images/content/bride.jpg" alt="Groom" class="img-responsive">
+						<img src="images/content/bride1.png" alt="Groom" class="img-responsive">
 					</div>
 					<h2>R Ramya</h2>
 					<p>(D/o Mr.Ramkumar M & Mrs.Kavitha V)</p>
