--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Template Name: Wedding
 				<div class="wd_about_infobox">
 					<h1>Invitation</h1>
 					<div class="wd_about_infobox_date">
-						<p>We inviting you and your family on</p>
+						<p>We are inviting you and your family on</p>
 						<h3>Saturday</h3>
 						<h2>16 Mar 2019</h2>
 						<p>At Lakshmi Thirumana Mandabam, Pollachi Main Rd, Echanari, Coimbatore.</p>
